--- a/RSPdx/ExtIO_SDRplay.vcxproj
+++ b/RSPdx/ExtIO_SDRplay.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{2F5638BD-6CEB-41F8-8ADF-BB270180EADE}</ProjectGuid>
     <RootNamespace>ExtIO_SDRplay</RootNamespace>
     <ProjectName>ExtIO_SDRplay_RSPdx</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -40,7 +40,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141_xp</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
