--- a/RSP1/src/ExtIO_SDRplay.rc
+++ b/RSP1/src/ExtIO_SDRplay.rc
@@ -118,6 +118,8 @@ FONT 8, "Ms Shell Dlg"
 {
     PUSHBUTTON      "Advanced", IDC_Advanced, 365, 258, 50, 17, 0, WS_EX_LEFT
 	CONTROL         IDB_SDRPlay, 12120, WC_STATIC, SS_BITMAP | SS_CENTERIMAGE | SS_SUNKEN | SS_REALSIZECONTROL, 0, 0, 565, 248, WS_EX_STATICEDGE
+    EDITTEXT        IDC_LNAGRNO, 69, 136, 31, 14, WS_DISABLED | ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
+    CONTROL         "", IDC_LNASLIDER, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_AUTOTICKS | TBS_VERT | TBS_BOTH | TBS_ENABLESELRANGE, 69, 74, 31, 62, WS_EX_LEFT
     COMBOBOX        IDC_IFMODE, 280, 85, 50, 100, CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
     EDITTEXT        IDC_PPM, 135, 95, 40, 14, ES_RIGHT | ES_AUTOHSCROLL, WS_EX_LEFT
     CONTROL         "", IDC_PPM_S, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_SETBUDDYINT, 175, 95, 11, 14, WS_EX_LEFT
@@ -131,20 +133,16 @@ FONT 8, "Ms Shell Dlg"
     COMBOBOX        IDC_SAMPLERATE, 405, 80, 35, 175, CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
     CONTROL         "", IDC_GAINSLIDER, TRACKBAR_CLASS, WS_TABSTOP | TBS_VERT | TBS_BOTH | TBS_ENABLESELRANGE, 497, 78, 30, 90, WS_EX_STATICEDGE
     LTEXT           "SDRplay Ltd", IDC_STATIC2, 8, 257, 40, 9, SS_LEFT, WS_EX_LEFT
-    LTEXT           "Version 4.2  Build 0710", IDC_STATIC3, 7, 266, 100, 9, SS_LEFT, WS_EX_LEFT
+    LTEXT           "Version 5.0  Build 0902", IDC_STATIC3, 7, 266, 100, 9, SS_LEFT, WS_EX_LEFT
     LTEXT           "Station: ", IDC_STATIONNAME, 20, 247, 200, 9, SS_LEFT | SS_NOTIFY, WS_EX_LEFT
     PUSHBUTTON      "^", IDC_StationName_PopOut, 7, 246, 10, 10, 0, WS_EX_LEFT
     PUSHBUTTON      "Load Defaults", IDC_LoadDefaults, 420, 258, 60, 17, 0, WS_EX_LEFT
     PUSHBUTTON      "Exit", IDC_EXIT, 525, 258, 35, 17, 0, WS_EX_LEFT
     PUSHBUTTON      "Help", IDC_HELP_BUTTON, 485, 258, 35, 17, 0, WS_EX_LEFT
     PUSHBUTTON      "Profiles", IDC_ProfilesButton, 310, 258, 50, 17, 0, WS_EX_LEFT
-    LTEXT           "LNA ON", IDC_LNASTATE, 75, 195, 30, 8, SS_LEFT, WS_EX_LEFT
-    LTEXT           "LNA GR 0 dB", IDC_LNAGR, 70, 205, 48, 8, SS_LEFT, WS_EX_LEFT
-    LTEXT           "IF Gain Reduction 78 dB", IDC_IFGR, 230, 200, 83, 8, SS_LEFT, WS_EX_LEFT
     LTEXT           "Current Profile: ", IDC_ProfileFileName, 95, 265, 150, 9, SS_LEFT, WS_EX_LEFT
     LTEXT           "Total System Gain Reduction 78 dB", IDC_TOTALGR, 233, 225, 132, 10, SS_LEFT, WS_EX_LEFT
     LTEXT           "", IDC_PROFILE_CHANGED, 287, 260, 10, 9, SS_LEFT, WS_EX_LEFT
-	AUTOCHECKBOX    "LNA EN", IDC_LNAGR_SWITCH, 70, 130, 50, 8, 0, WS_EX_LEFT
 	LTEXT			"", IDC_OVERLOAD, 160, 226, 60, 8, SS_LEFT, WS_EX_LEFT
 }
 
